# thesis_kaamba

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
eval_results/ggtg/: config.json  eval_config.json  final_eval.json  search_ggtg_study.db
eval_results/ggtg/checkpoints/: best_model.pt
eval_results/ggtg/results/: aggregate.json  eval_report_GGTG_syn.txt  eval_report_ggtg.txt  metrics.jsonl
eval_results/ggtg_no_encoder/: config.json  eval_config.json  final_eval.json  loader_configs.json
eval_results/ggtg_no_encoder/checkpoints/: best_model.pt
eval_results/ggtg_no_encoder/results/: aggregate.json  eval_report.txt  metrics.jsonl
eval_results/mcfw/: config.json  eval_config.json  final_eval.json  search_mcfw_study.db
eval_results/mcfw/checkpoints/: best_model.pt
eval_results/mcfw/results/: aggregate.json  eval_report_emp_mcfw.txt  eval_report_mcfw.txt  eval_report_syn_mcfw.txt  metrics.jsonl
eval_results/mcfw_no_encoder/: config.json  eval_config.json  final_eval.json  loader_configs.json
eval_results/mcfw_no_encoder/checkpoints/: best_model.pt
eval_results/mcfw_no_encoder/results/: aggregate.json  eval_report_mcfw_noe.txt  metrics.jsonl
eval_results/synthetic_ggtg/: aggregate.json  eval_report.txt
eval_results/synthetic_ggtg/per_stimulus/: prize-zero.text.4.json  voicemail-neg.difficulty.json  voicemail-neg.interest.json  voicemail-neg.naturalness.json  voicemail-neg.question.json  voicemail-neg.text.0.json  voicemail-neg.text.1.json  voicemail-neg.text.2.json  voicemail-neg.text.3.json  voicemail-pos.difficulty.json  voicemail-pos.interest.json  voicemail-pos.naturalness.json  voicemail-pos.question.json  voicemail-pos.text.0.json  voicemail-pos.text.1.json  voicemail-pos.text.2.json  (+9 more)
kaamba_repo/: .python-version  README.md  pyproject.toml
kaamba_repo/src/kaamba/: __init__.py
kaamba_repo/src/kaamba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kaamba_repo/src/kaamba/net/: __init__.py
kaamba_repo/src/kaamba/net/configs/: __init__.py
kaamba_repo/src/kaamba/net/models/: __init__.py  kaamba.py
kaamba_repo/src/kaamba/net/pretrained_weights/: __init__.py
kaamba_repo/src/kaamba/scripts/: __init__.py  dataset_stats.py  evaluate_model.py  infer.py  plot_architecture.py  unified_training.py
kaamba_repo/src/kaamba/utils/: __init__.py  baselines.py  dataloader_config_builder.py  eval_plots.py  eval_report.py  gaze_preprocessing.py  image_preprocessing.py  loss_functions.py  memory_monitor.py  on_the_fly_dataset.py  stats_plots.py  stats_report.py
(+50 files in other folders)
