[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.3",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
    "datasets",
    "uv-build>=0.10.8",
    "matplotlib==3.10.7",
    "pre-commit>=4.5.1",
    "pymovements",
]
readme = "README.md"

[tool.uv.workspace]
members = [
    "kaamba",
]

[tool.uv.sources]
pymovements = { git = "https://github.com/pymovements/pymovements", rev = "07c6596e7d171104ef1d81c3a272cf1c7466c480" }
#pymovements = { git = "https://github.com/pymovements/pymovements", branch = "main" }
